Version 2.7.3dev:

* Using (Left) Alt (Cmd on OS X) as default keyboard shortcut modifier.
* Workaround to allow Alt+Tab to work on non-Windows/non-OS-X platforms.
* Most built-in shortcuts are now configurable.
* Actions for built-in shortcuts are now available for mapping.
* Actions for F11 and F12 (release) can be customized.
* Ungrab mouse and keyboard when entering the menu.
* Added support for reading controller configs from fs-uae.dat.
* Support for creating static / fully self-contained .exe on Windows.
* JIT: Better fldcw_m_indexed fix (can use all x86-64 registers).
* Fixed RSP inc/dec for x86-64, shadow stack space on Windows / x86-64.
* Fix callee-saved registers for Windows x64 ABI.
* Fixed crash when using Blizzard accelerators and x86-64 JIT.
* Respect cpu option when checking for Zorro III config problems.
* Compile with -fno-strict-aliasing to avoid potential aliasing bugs.
* Removed some SDL 1.2 code.

Version 2.7.2dev:

* Enable FPU JIT compilation by default on x86-64.
* Use high-res timer on Windows for fastest-possible mode (perf fix).
* Parallel port ("printer") over TCP/IP, added parallel_port option.
* Fixed crash (abort) with A1200 Blizzard CPU board models.
* Added Lallafa's vpar virtual parallel port (not tested).
* Serial port over TCP/IP.
* More efficient uae_vm_commit for Linux and OS X.
* Updated emulation core from WinUAE 3200b15.

Version 2.7.1dev:

* Several FPU JIT fixes for x86-64 (fixes crashes and misbehavior).
* Access fault handler supports x86-64 extended registers (REX prefix).
* Fixed crash when 1 GB Zorro III RAM was used without other Z3 expansions.
* Fixed non-blocking socket I/O support in bsdsocket_posix [Jens Maus].
* Added more gamepad controller configurations.
* New option rtg_viewport for optional cropping of the RTG display.
* Updated emulation core from WinUAE 3200b13.

Version 2.7.0dev:

* Merged JIT compiler updates from the ARAnyM project.