@@ -22,6 +22,7 @@ enum {
     FS_EMU_ACTION_WARP,
     FS_EMU_ACTION_ZOOM,
     FS_EMU_ACTION_ZOOM_BORDER,
+    FS_EMU_ACTION_FULL_KEYBOARD,
 
     FS_EMU_ACTION_LAST,
 };
